--- a/Dataset_Regresión_Logística_Titanic.ipynb
+++ b/Dataset_Regresión_Logística_Titanic.ipynb
@@ -1957,14 +1957,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a4d9363-7cae-4b08-be58-bb811f12e91c",
+   "id": "adb9e930-c771-4bfa-8cbb-7490f42f12e1",
    "metadata": {},
-   "source": []
+   "source": [
+    "Del desempeño del modelo se puede describir:\n",
+    "\n",
+    "Precisión: Precisión mide la proporción de predicciones positivas verdaderas entre todas las predicciones positivas realizadas por el modelo. Aquí la precisión para la clase **\"sobreviviente\"** es 0,73, lo cual corresponde al 70% de los predichos como sobrevivientes al hundimienyo del Titanic.\n",
+    "\n",
+    "Recall: Mide la proporción de predicciones positivas verdaderas entre todas las instancias positivas reales en el conjunto de datos. Aquí el Recall para la clase **\"sobreviviente\"** es 0,66, lo cual corresponde al 66% que el modelo identificó correctamente a todos los sobrevivientes.\n",
+    "\n",
+    "F1 Score: Es la media armónica de precisión y recuperación. Proporciona una puntuación única que equilibra la Precisión y Recall. Aquí la puntuación F1 para la clase **\"sobreviviente\"** es 0,70, lo que indica un equilibrio entre precisión y recuerdo.\n",
+    "\n",
+    "De la Matriz de Confusión podemos interpretar:\n",
+    "\n",
+    "**Verdaderos negativos:** el recuento de observaciones que un clasificador predijo correctamente como falso 116\n",
+    "\n",
+    "**Verdaderos positivos:** el recuento de observaciones que un clasificador predijo correctamente como Verdadero 57\n",
+    "\n",
+    "**Falsos positivos:** el recuento de observaciones que un clasificador predijo incorrectamente como Verdaderas 21\n",
+    "\n",
+    "**Falsos negativos:** el recuento de observaciones que un clasificador predijo incorrectamente como falso 29\n",
+    "\n",
+    "De la curva de precisión del modelo se puede interpretar:\n",
+    "\n",
+    "El AUC es 0,75 lo cual corresponde al 75 % de las predicciones del clasificador son correctas en todos los umbrales de clasificación."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bacf89bf-75c1-4907-8437-73b14beaab0a",
+   "id": "8618d81d-7695-4331-8629-19fefc17dce3",
    "metadata": {},
    "outputs": [],
    "source": []
